--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		<input type="radio" id="gender_m" name="gender" required> <label for="gender_m">Male</label>
 		<input type="radio" id="gender_f" name="gender" required> <label for="gender_f">Female</label>
 		<label for="cars">Car Brands</label>
-		<select id="cars" placeholder="--Please choose an option--">
+		<select id="cars" required placeholder="--Please choose an option--">
 			<option >BMW</option>
 			<option >Audi</option>
 			<option >MG</option>
