--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
 		<input type="password" id="password" required placeholder="Password">
 		<label for="tos">I agree to the TOS</label>
 		<input type="checkbox" required id="tos">
-		<input type="submit" id="submit" value="Submit">
+		<button type="submit"> Submit</button>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
